corrected alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .box{
-  background-color: #61dafb;
-  padding: 3%;
+ 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +7,11 @@
   
 }
 
-
+.Col{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
 
 
 
